<resources>
    <string name="app_name">Open Library</string>
    <string name="labelRegister">Register User</string>
    <string name="labelLogin">Open Library</string>
    <string name="labelHome">Home</string>
    <string name="labelProfile">Profile</string>
    <string name="labelAdd">Add Book</string>
    <string name="labelBook">Book Library</string>
    <string name="labelInfoBook">Book Information</string>
    <string name="labelUsers">Users</string>
    <string name="homeAdminText">Welcome, Admin \n\nPlease use the bottom navigation menu to use the app</string>
    <string name="homeClienteText">Welcome, User\n\nPlease use the bottom navigation menu to use the app</string>
    <string name="pagesBook">Pages</string>
    <string name="authorBook">Author</string>
    <string name="titleBook">Title</string>
    <string name="searchBook">Search Book</string>
    <string name="insertUsername">Your username</string>
    <string name="insertPassword">Your password</string>
    <string name="insertEmail">Your email</string>
    <string name="insertPhoneNumber">Your phone number</string>
    <string name="libraryName">Library Name</string>
    <string name="profileForm">Profile</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="foundUser">Welcome</string>
    <string name="notFoundUser">User does not exists</string>
    <string name="operationFailed">Failed</string>
    <string name="addBookSucceed">Added Successfully!</string>
    <string name="updateBookSucceed">Updated Successfully!</string>
    <string name="deleteBookSucceed">Deleted Successfully!</string>
    <string name="emptyData">No data!!</string>
    <string name="emptyStrings">Empty information</string>
    <string name="error">Error! Try again</string>
    <string name="createdUser">Your account has been created</string>
    <string name="registerTitle">Register</string>
    <string name="bookAuthor">Book Author</string>
    <string name="book">Book</string>
    <string name="bookTitle">Book Title</string>
    <string name="bookPages">Number of pages</string>
    <string name="bookBtnAdd">Add</string>
    <string name="bookBtnUpdate">Update</string>
    <string name="bookBtnEdit">Edit</string>
    <string name="bookBtnDelete">Delete</string>
    <string name="confirmBookDelete">DELETE</string>
    <string name="confirmDialogBookDelete">Are you sure you want to delete</string>
    <string name="confirmYes">Yes</string>
    <string name="confirmNo">No</string>
    <string name="menuHome">Home</string>
    <string name="menuUsers">Users</string>
    <string name="menuUser">Profile</string>
    <string name="menuBooks">Books</string>
    <string name="welcome_to">Welcome to</string>

</resources>