<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserClienteUpdateActivity">

    <EditText
        android:id="@+id/editPasss"
        android:layout_width="216dp"
        android:layout_height="54dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_pencil"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/insertPassword"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="86dp"
        android:layout_height="88dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="48dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone"
        app:srcCompat="@drawable/ic_arrow_back" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="216dp"
        android:layout_height="54dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_pencil"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/insertEmail"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="adwaf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGt" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="92dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="76dp"
        android:text="@string/bookBtnEdit"
        android:textStyle="bold|italic"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="105dp"
        android:layout_height="56dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/bookBtnUpdate"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <EditText
        android:id="@+id/editGt"
        android:layout_width="216dp"
        android:layout_height="54dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_pencil"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/insertUsername"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="gsf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="216dp"
        android:layout_height="54dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_pencil"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/insertPhoneNumber"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasss" />

</androidx.constraintlayout.widget.ConstraintLayout>