<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context="pt.ips.pam.projetopam.AddActivity">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="346dp"
        android:layout_height="54dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/insertUsername"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="346dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/insertPassword"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="346dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/insertEmail"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <EditText
        android:id="@+id/number_input"
        android:layout_width="346dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/insertPhoneNumber"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:text="Update"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_input" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:text="Delete"
        android:textAllCaps="false"
        android:textColor="#ff0000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button" />

</androidx.constraintlayout.widget.ConstraintLayout>