<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoBooksActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="97dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:text="@string/book"
        android:textStyle="italic|bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="80dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/titleBook"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="84dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/authorBook"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="84dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/pagesBook"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTitleBook"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_point_arrow"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editAuthorBook"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_point_arrow"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/editTitleBook" />

    <EditText
        android:id="@+id/editPagesBook"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_point_arrow"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/editAuthorBook" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="54dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_book" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="46dp"
        android:layout_height="47dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="88dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/ic_arrow_back" />

</androidx.constraintlayout.widget.ConstraintLayout>